# maqo

./: Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: block_states.rs  chunk.rs  main.rs
crates/app/src/loaders/: biome.rs  block.rs  block_states.rs  mod.rs  model.rs  partial_model.rs  texture.rs
crates/app/src/util/: colors.rs  mod.rs  string.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/data/src/block_states/: mod.rs
crates/data/src/model/: axis.rs  direction.rs  mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
src/: block_states.rs  chunk.rs  main.rs
src/block/: mod.rs  partial.rs
src/data/block_states/: mod.rs
src/data/model/: direction.rs  element.rs  mod.rs  rotation.rs
src/util/: mod.rs  string.rs  vectors.rs
