[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
indexmap = { version = "2.2.6", features = ["serde"] }
macroquad = { git = "https://github.com/not-fl3/macroquad.git", features = [
    "glam-serde",
] }
noise = "0.9.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
